--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://axzybsq_user:Yfdaxk8VIe1MhPTve63FUPsVJeG13Uch@dpg-d4u6g3u3jp1c73cgco5g-a.virginia-postgres.render.com/axzybsq
+DATABASE_URL=postgresql://postgres:GazsxQNfXEXcnUKOAvRbKbFxgWbmWBuu@shortline.proxy.rlwy.net:15425/railway
 APP_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9a
