--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "node-cron": "^3.0.3",
     "nodemailer": "^6.9.14",
     "path": "^0.12.7",
+    "pdfkit": "^0.17.2",
     "swagger-ui-express": "^4.6.0",
     "tsconfig-paths": "^4.2.0",
     "yamljs": "^0.3.0"
@@ -56,6 +57,7 @@
     "@types/jsonwebtoken": "^9.0.5",
     "@types/morgan": "^1.9.9",
     "@types/node": "^20.11.0",
+    "@types/pdfkit": "^0.17.4",
     "@types/swagger-ui-express": "^4.1.3",
     "@types/yamljs": "^0.2.34",
     "nodemon": "^3.0.2",
