--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-DATABASE_URL=postgresql://postgres:GazsxQNfXEXcnUKOAvRbKbFxgWbmWBuu@shortline.proxy.rlwy.net:15425/railway
+DATABASE_URL=postgresql://postgres:AoWWUACEwrHNFEfyDIknFMVKTLOjlzps@mainline.proxy.rlwy.net:35883/railway
 APP_SECRET=eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9a
